--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,5 @@
 \paragraph{Theoretical contributions}
-The theoretical section presents an accessible introduction to the electrodynamics of periodic structures. It starts from the fundamental Maxwell equations, develops the concept of waves propagating in vacuum and in resonant media. It shows how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. Beyond this common approach, the nonlocal response is introduced, and it is shown that in homogeneous media it inevitably causes the material properties to depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
+The theoretical section of this thesis aims to present an accessible introduction to the electrodynamics of periodic structures. It starts from the fundamental Maxwell equations, develops the concept of waves propagating in vacuum and in resonant media. It shows how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. Beyond this common approach, the nonlocal response is introduced, and it is shown that in homogeneous media it inevitably causes the material properties to depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
 
 This phenomenon is common in optics, but in homogeneous materials it is usually negligible. When the electrodynamics of periodic structures is concerned, the spatial dispersion is often particularly pronounced and should not be neglected. More general shapes of the dispersion curves in spatially-dispersive media are illustrated in several figures. 
 
