--- a/result.tex
+++ b/result.tex
@@ -1059,7 +1059,7 @@ A closely related phenomenon  on corrugated surfaces of metallic diffraction gra
 
 Since the structure and the incident fields are both symmetric, equal amplitudes of the surface plasmons propagating in the $+x$ and $-x$ directions are excited. They form a standing plasmonic resonance, with points of maximum oscillating current (antinodes) located in the centers metallic bars. The extraordinary transmission relies on the incoming plane wave coupling of to the spoof surface plasmons, transfer of energy of SPPs to the spoof surface plasmons on the rear side of the structure, and re-radiation of the plane wave. 
 
-In a numerical study of SPP-assisted transmission through a single slit, Lalanne \textit{et al.} have determined \cite{lalanne2005theory} the optimum slit width for wave-plasmon coupling as $d_x \approx 0.23 \lambda$, which,  in Fig. \ref{fg_yslit_xscan}a, noticeably well matches the slit width $d_x$ corresponding to the lowest frequency of the zero-reflection curve. Stronger coupling thus apparently down-tunes the frequency, but it is not the main determining factor for the peak transmission efficiency; since the extraordinary transmission is a resonant process, it can achieve high amplitude of transmission even through arbitrarily narrow slits. 
+In a numerical study of SPP-assisted transmission through a single slit, Lalanne \textit{et al.} have determined \cite{lalanne2005theory} the optimum slit width for wave-plasmon coupling as $d_x \approx 0.23 \lambda$, which noticeably well matches the slit width $d_x$ corresponding to the lowest frequency of the zero-reflection curve  (see Fig. \ref{fg_yslit_xscan}a). Stronger coupling thus appears to down-tune the frequency, but it is not the main determining factor for the peak transmission efficiency; since the extraordinary transmission is a resonant process, it can achieve high amplitude of transmission even through arbitrarily narrow slits. 
 
 %Lalanne-Theory_of_fishnet_optical_NIM.pdf
 % SPP on surface impact the transmission through a nano-aperture; 
@@ -1191,30 +1191,30 @@ The first photonic band is obviously accurately matched by both simulation setup
 \end{figure}
 %}}}
 \paragraph{Extraordinary transmission in fishnets} %{{{
-A natural modification of the structure discussed  above is to add conductive connections between the metallic stripes to form a perforated metallic sheet which is also denoted as a \textit{mesh}\index{mesh}, \textit{sub-wavelength hole array}\index{sub-wavelength hole array}, or within the context of metamaterials, as a \textit{fishnet}\index{fishnet}. Already in 1950s, a perforated metallic sheet was proposed to form an artificial dielectric \cite[p. 58]{brown1953artificial} with an index of refraction $0 < \Neff' < 1$, but the electromagnetic wave propagation was oriented parallel to the slabs and it was not mediated by a resonance.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
+By adding conductive connections across the slits in the above described structure, a perforated metallic sheet is formed which is also denoted as a \textit{mesh}\index{mesh}, \textit{sub-wavelength hole array}\index{sub-wavelength hole array}, or within the context of metamaterials, as a \textit{fishnet}\index{fishnet}. Already in 1950s, an array of perforated metallic sheets was proposed to form an artificial dielectric \cite[p. 58]{brown1953artificial} with an index of refraction $0 < \Neff' < 1$, but the electromagnetic wave propagated parallel to the slabs.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
 The spectral selectivity of a single metallic mesh perpendicular to the wave vector was employed in 1960s as a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  
 
-The research into sub-wavelength hole arrays was revived with the advent of plasmonics, since periodic patterning of the metallic surface near a sub-wavelength hole was shown to enable the \textit{extraordinary optical transmission}\index{extraordinary transmission} (EOT) which can be orders of magnitude larger than the transmission estimated from the geometrical hole dimensions \cite{ebbesen1998extraordinary}. The mechanism of EOT is similar to that one described above; the incident light couples to surface plasmons, the energy is efficiently transferred through the hole, and finally re-radiated again at the rear side. 
+The research of sub-wavelength hole arrays was revived when periodic patterning of a metallic surface near a sub-wavelength hole was shown  \cite{ebbesen1998extraordinary} to enable the extraordinary optical transmission which can be orders of magnitude larger than the transmission estimated from the geometrical hole dimensions. 
 %  % predicted by Bethe's law of inverse fourth power of 
+%Periodical arrangement of the holes plays the role of structuring the surroundings of a single hole. 
+%The periodically perforated metallic sheet with holes also exhibits a resonance which leads to a pronounced drop in its reflectance spectrum, slightly below the diffraction edge. 
+In a similar way as in the slit array, the incident light couples to surface plasmons, the energy is efficiently transferred through the hole, and finally re-radiated again at the rear side. 
 
-Periodical arrangement of the holes is equivalent to structuring of the surroundings of a single hole. In line with the already demonstrated resonance in a metallic sheet with infinite slits, the metallic sheet with holes exhibits a resonance slightly below the diffraction edge which leads to a great drop in reflection. The exact behaviour of the structure is determined by the  metal thickness, dimensions of the holes, their spacing in the $x$-$y$ plane and the spacing of the metallic sheets along the $z$-axis.
 
 %}}}
 \paragraph{Negative index of refraction}%{{{
-%In 2003, the % TODO
-Under a correct choice of parameters of the structure, the wave radiated from the opposite side of the sheet has an opposite sign to the incoming one, leading to negative phase advance along the unit cell, and to formation of a $\Neff'<0$ band. 
+Under the correct choice of geometrical parameters, the wave radiated from the opposite side of the sheet has an negative phase advance compared to the incident one, leading to negative phase advance along the unit cell and to the formation of a $\Neff'<0$ band. 
+An important improvement over previous designs of negative-index metamaterials is that fishnets achieve relatively low losses even in the near-infrared and optical ranges, since their simple geometry is optimised for short conduction paths.
 
-The conventional explanation of the negative refractive index of fishnets is based on the combination of negative effective permittivity and permeability. The former, $\eeff'<0$ should result from the inductive effect of the metallic connections, forming an electric dipole opposite to the incident electric field in a way similar to the wires oriented along the $x-$axis. The magnetic response is formed by individual resonances localised close to the fishnet holes, which exhibit a magnetic dipole moment.
-
-An important difference from previous designs of negative-index metamaterials, fishnets achieve relatively low losses even in the near-infrared and optical ranges, since its simple geometry is optimised for short conduction paths.
-Compared, e.g., to the SRR array with wires, the occurrence of $\Neff'<0$ is less robust, and most notably depends on the following critical parameters:
+Simultaneously,  the occurrence of $\Neff'<0$ is relatively sensitive to the choice of parameters of the structure, most importantly the spacing of the holes in the $x$-$y$ plane, the dimensions of the holes and the spacing of the metallic sheets along the $z$-axis.
 \begin{enumerate}
-\item{The transverse periodicity of the holes mostly influences the frequency of operation, by a similar mechanism as described in the previous chapter.} 
-\item{The relative size of the holes influences the coupling strength, but the resonance frequency is virtually independent of it. Small holes lead to weak coupling of the surface plasmons and to the photonic band with $\Neff'<0$ to be very narrow. In contrast, too large holes lead to broad photonic bands which however never reach $\Neff'<0$. 
+\item{The transverse periodicity of the holes determines the frequency of operation, by a similar mechanism as described in the previous chapter.} 
+\item{The dimensions of the holes influence the coupling strength, but the resonance frequency is only weakly affected by it. Narrow holes lead to weak coupling of the surface plasmons and to the photonic band with $\Neff'<0$ to be very narrow. In contrast, too large holes lead to broad photonic bands which however never reach $\Neff'<0$. 
 	
 If the holes are anisotropic, the described effect is more sensitive to the hole dimensions parallel to the $y$-axis. Anisotropic shape of the holes  was shown to influence the impedance, allowing to suppress reflections \cite{croenne2009left}.} 
-\item{Finally, the spacing of the metallic sheets along the $z$-axis determines the strength of the interaction. When the layers are overly sparse, the positive phase acquired between them overpowers the effect of plasmonic resonances and prevents the formation of $\Neff'< 0$ band. When they are very dense, the near-field coupling apparently becomes the dominant mechanism of energy transport. This is the case of numerous experimental samples. For instance, in Ref. \cite{valentine2011development}, the sheet distance ($a_z = 83$ nm) was less than 10 \% of the transverse hole periodicity ($a_x = a_y = 860$ nm). The scattering parameter method is obviously not applicable for this kind of structures.}
+\item{Finally, the spacing of the metallic sheets along the $z$-axis determines the strength of the interaction with the wave. When the layers are overly sparse, the positive phase acquired between them overpowers the effect of plasmonic resonances and prevents the formation of $\Neff'< 0$ band. When they are very dense, the near-field coupling apparently becomes the dominant mechanism of energy transport, which is the case of numerous experimental samples. For instance, in Ref. \cite{valentine2011development}, the sheet distance ($a_z = 83$ nm) was less than 10 \% of the transverse hole periodicity ($a_x = a_y = 860$ nm). The scattering parameter method is obviously not applicable for this kind of structures.}
 \end{enumerate}
+
 
 %}}}
 \begin{figure}[t] % fg_cdh_comp %{{{
@@ -1256,11 +1256,14 @@ If the holes are anisotropic, the described effect is more sensitive to the hole
 %NAVA11 experiment in microwave: 2.5x2.5 mm unit cell, stack periodicity 0.525 mm with 2.43 diel eps, hole radius 0.55 mm
 %NAVA11 alternating M-I-M-I... structure, but a "functional layer" is a M-I-M
 
-Also in the literature, it is noted that the s-parameter method may not be applicable to fishnets \cite{croenne2009left}\cite[p. 102]{croenne2009controle}, indicated by major difference in retrieved parameters depending on the number of layers. At the same time, this does not imply that the structure can not be assigned a negative index of refraction; a wedge formed  of a very similar fishnet metamaterial is demonstrated to refract terahertz rays under negative angles \cite{wang2010composite}. 
+The conventional explanation is that the negative refractive index of fishnets arises from the combination of negative effective permittivity and permeability. The former, $\eeff'<0$ is attributed to the inductive effect of the metallic connections which should develop an electric dipole opposite to the incident electric field in a way similar to the wires oriented along the $x-$axis. The magnetic response is formed by individual resonances localised close to the fishnet holes, which exhibit a magnetic dipole moment.
 
-For an illustration, we computed the dispersion curves of the fishnet from Ref. \cite{navarro2011dual} in Fig. \ref{fg_cdh_yslit}b. To approximately match the frequency band of operation with other structures described, we up-scaled their structure ten times without any qualitative impact on the results. We set the hole periodicity $a_x=a_y = 250$ $\upmu$m and the slab periodicity $a_z = 52.5$ $\upmu$m, the circular holes had radius of 55 $\upmu$m. The points retrieved current-driven homogenisation, are again believed to be relatively accurate, and show a narrow band between 980 and 1080 with a negative index of refraction. 
+%Some papers \cite{} use this explanation, while some are more careful and 
+Some papers note that the s-parameter method may not be applicable to fishnets \cite{croenne2009left}\cite[p. 102]{croenne2009controle}, which is indicated by differences in retrieved parameters depending on the number of layers. At the same time, this does not imply that the infinite structure can not be assigned a negative index of refraction; a wedge formed  of a fishnet metamaterial is demonstrated to refract terahertz rays under negative angles \cite{wang2010composite} as predicted. 
 
-As indicated by the dashed green curve, the scattering parameter method detects this $\Neff'<0$ band, too, but its frequency range is severely shifted up by roughly 100 GHz. Even more pronounced is the deviation in higher bands. The scattering-parameter method eventually fails to predict anything above the onset of diffraction at 1200 GHz.
+For an illustration, we computed the dispersion curves of the fishnet from Ref. \cite{navarro2011dual} in Fig. \ref{fg_cdh_yslit}b. (To approximately match the frequency band of operation with other structures described, we up-scaled their structure ten times without any qualitative impact on the results.) We set the hole periodicity $a_x=a_y =$ 250 $\upmu$m and the slab periodicity $a_z =$ 52 $\upmu$m, the circular holes had radius of 55 $\upmu$m. The dispersion curves indicated by bubbles were retrieved using current-driven homogenisation. We believe this homogenisation approach is free of artifacts also for this kind of structure. This structure shows a narrow band between 980 and 1080 with a negative index of refraction. 
+
+As indicated by the dashed green curve, even the scattering parameter method detects this $\Neff'<0$ band, but the found frequency is erroneously shifted up by roughly 100 GHz. Even more pronounced is the error in higher bands. The scattering-parameter method eventually fails to predict anything above the onset of diffraction at 1200 GHz.
 % % CDH Fishnet xholesize=1.100e-04 simtime=2.000e-10 resolution=5.000e-06 cellsize=5.250e-05 cellsizexy=2.500e-04 cornerradius=5.500e-05 slabthick=1.000e-05 yholesize=1.100e-04.pdf
 
 %... Improved cross-shaped pattern for better spectral selectivity %\cite{porterfield1994resonant}
@@ -1276,7 +1279,7 @@ As indicated by the dashed green curve, the scattering parameter method detects 
 		\label{fg_expe_fishnets} 
 		\centering \vspace{-3mm}
 \begin{tabular}{r}
-\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_ap.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
+\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_ap.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.063\textwidth}\\
 \begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_cp.pdf} \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.03\textwidth}\\
 %\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_cs.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
 %\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_as.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
@@ -1284,9 +1287,11 @@ As indicated by the dashed green curve, the scattering parameter method detects 
 \end{figure}
 %}}}
 \paragraph{Experimental results} %{{{
-, 
-Two samples of fishnets, fabricated by femtosecond laser machining of a steel foil, are shown in Fig. \ref{fg_fishnet28_photo}). 
-The corresponding experimental transmittance spectra of these two samples are presented in Fig. \ref{fg_expe_fishnets}
+Two samples of fishnets, fabricated by femtosecond laser machining of a steel foil, are photographed in Fig. \ref{fg_fishnet28_photo}. Their hole periodicity was 300$\times$300 $\upmu$m. They differed by their hole dimensions; the first one had hole axes $d_x \times d_y = $ 180$\times$200 $\upmu$m, the second left much narrower metallic bridges between the holes with $d_x \times d_y = $ 230$\times$250 $\upmu$m. The holes were cut to the shape of rounded rectangles, which however did not change the electromagnetic behaviour.
+
+The dispersion of such a metamaterial had again to be characterised using the current-driven homogenisation. We chose the layer periodicity $a_z = $ 200 $\upmu$m and presented the corresponding dispersion curves in Fig. \ref{fg_cdh_fncomp}a,b. For both samples, the first photonic band was relatively well retrieved also by the scattering parameter method (green curves). At the portion of spectrum approaching the diffraction onset on 1 THz, only the CDH results seem to be valid. 
+
+The fishnet with smaller holes in Fig. \ref{fg_cdh_fncomp}a starts a second photonic band with positive group velocity at 920 GHz. The corresponding photonic band in the right panel, however, starts with a negative group velocity, changing to the positive one in the middle of the first Brillouin zone for $Ka/2\pi \approx 0.25$. This effect can be explained as anticrossing of two photonic bands. %Excitation of other resonance modes introduces additional 
 
 %TODO add? Part of the fishnets were made of two foils as a metal-insulator-metal structure, but their spectra were also hard to interpret.
 
@@ -1312,10 +1317,15 @@ The corresponding experimental transmittance spectra of these two samples are pr
 \end{figure} 
 %}}}
 \paragraph{Quadrupole resonance in experimental spectra}%{{{
-For the simulation of a fishnet, different grid resolutions were used. While usually the voxel sizes of 2 or 4 $\upmu$m were used throughout the thesis as a good tradeoff of simulation time and accuracy of results, in Fig. \ref{fg_fnquadrup} the FDTD simulation was deliberately set to very coarse, with a voxel dimension of 10 $\mu$m. Still, the experimental and computed reflectance spectra yielded a very good match without any additional corrections.
+The corresponding experimental transmittance spectra of single unit cells of both fishnet samples are presented in Fig. \ref{fg_expe_fishnets} (red curves).  They were compared with the computed transmittance (green curves). 
 
-In most terahertz transmittance spectra of fishnets, a relatively sharp notch between 0.5 and 1.0 THz was observed. The discretisation error has helped to explain it, since it broke the twofold mirror symmetry of the fishnet hole. 
-This way, it also broke the mirror symmetry of the first quadrupole mode, introducing a slight electric dipole into its field pattern (see Fig. \ref{fg_fnquadrup}). As a result, the quadrupole started to couple with the incident plane wave, and very narrow resonances emerged also in the simulated spectra at 880 and 710 GHz, respectively (see green lines in Figs. \ref{fg_expe_fishnets}a,b). The resonance notches observed in the experiment are well matched by the simulation, and thus can be explained as the result of excitation of a quadrupole resonance.   % todo these resonances can be also observed in the CDH plots in Fig. \ref{fg_fishnet_cdh}a,b
+Typically the voxel sizes of 2 or 4 $\upmu$m were used throughout the thesis as a good tradeoff of simulation time and accuracy of results, including the CDH computation of fishnets in  Figs.  \ref{fg_cdh_fncomp}a,b. On the contrary, for the computation of Figs. \ref{fg_cdh_fncomp} and \ref{fg_expe_fishnets}, the FDTD simulation was deliberately set to very coarse resolution, with a voxel dimension of 10 $\upmu$m. Still, the lower-frequency part experimental and computed reflectance spectra yielded a notably good match.
+
+In the experimental spectra of fishnets,  between 0.5 and 1.0 THz, a distinct notch in transmittance was observed. The discretisation error has helped to explain its origin. With coarse simulation, the twofold mirror symmetry of the fishnet unit cell was broken, since the simulation defined a different number of voxels in the rounded hole edges. 
+
+Simultaneously, it also eliminated the symmetry of the fields in the first quadrupole mode, introducing a slight electric dipole into its field pattern (see Fig. \ref{fg_fnquadrup}). As a result, the quadrupole started to couple with the incident plane wave, and narrow resonances emerged also in the simulated spectra at 880 and 710 GHz, respectively (see green lines in Figs. \ref{fg_expe_fishnets}a,b). The resonance notches observed in the experiment are thus conclusively explained by the simulations. %and thus conclusively explain be explained as the result of excitation of a quadrupole resonance.   
+
+These resonances can be also observed in Fig. \ref{fg_fishnet_cdh}a,b as weak photonic branches crossing the first photonic band in its middle, although the periodic boundary conditions change their frequency. The different symmetry of resonances stipulates that the wave coupled to the quadrupole mode of the fishnet thus propagates with group velocity  opposite to that one coupled to the dipole mode.
 
 %}}}
 %}}} /section
